--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.6",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-number-format": "^5.1.4"
+    "react-modal-video": "^2.0.0",
+    "react-number-format": "^5.1.4",
+    "react-router-dom": "^6.11.2",
+    "react-slugify": "^3.0.2",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
