--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-dom": "^18.2.0",
     "react-modal-video": "^2.0.0",
     "react-number-format": "^5.1.4",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-slugify": "^3.0.2",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
